<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LoginActivity"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:id="@+id/editTextNazivZivotinje"
            android:layout_gravity="center_horizontal"
            android:hint="@string/naziv_zivotinje"
            android:layout_marginTop="20dp"
            android:singleLine="false" />

        <Spinner
            android:id="@+id/spinnerVrsta"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:id="@+id/editTextPasmina"
            android:layout_gravity="center_horizontal"
            android:hint="@string/pasmina_text"
            android:layout_marginTop="20dp"
            android:singleLine="false" />

        <RadioGroup
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/radioGroupGenderPett">

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/male_pet_text"
                android:layout_weight="0.5"
                android:id="@+id/radioBttnMalePet" />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/female_pet_text"
                android:layout_weight="0.5"
                android:id="@+id/radioBttnFemalePet" />
        </RadioGroup>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_next_text"
            android:id="@+id/bttnNext1"/>

    </LinearLayout>

</ScrollView>