<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context="com.example.computer.petme.activity.AccountActivity"
        >



        <ImageView
            android:layout_width="190dp"
            android:layout_height="167dp"
            android:id="@+id/imageView"
            android:layout_margin="5dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/majmun"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="left"
                android:layout_margin="5dp"
                android:layout_gravity="center_horizontal"
                android:textSize="25dp"
                android:text="@string/username_text"/>



            <TextView
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/empty"
                android:gravity="center"
                android:id="@+id/txtUsernameAcc"
                android:layout_margin="5dp"
                android:textSize="25dp"
               />

        </LinearLayout>


        <LinearLayout
            android:weightSum="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_margin="5dp"
                android:layout_gravity="center_horizontal"
                android:textSize="25dp"
                android:text="@string/fullname"/>

            <TextView
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/empty"
                android:id="@+id/txtFullName"
                android:layout_margin="5dp"
                android:textSize="25dp"
               />

        </LinearLayout>


        <LinearLayout
            android:weightSum="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_margin="5dp"
                android:layout_gravity="center_horizontal"
                android:textSize="25dp"
                android:text="@string/email_txt"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:text="@string/empty"
                android:gravity="center"
                android:id="@+id/txtEmail"
                android:layout_margin="5dp"
                android:textSize="25dp"
               />

        </LinearLayout>


        <LinearLayout
            android:weightSum="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_margin="5dp"
                android:layout_gravity="center_horizontal"
                android:textSize="25dp"
                android:text="@string/phone_txt"/>

            <TextView
                android:layout_width="0dp "
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:text="@string/empty"
                android:gravity="center"
                android:id="@+id/txtPhone"
                android:layout_margin="5dp"
                android:textSize="25dp"
                />

        </LinearLayout>

        <LinearLayout
            android:weightSum="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_weight="0.5"
                android:layout_margin="5dp"
                android:layout_gravity="center_horizontal"
                android:textSize="25dp"
                android:text="@string/lokacija"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:text="@string/empty"
                android:layout_margin="5dp"
                android:id="@+id/txtLokacija"
                android:gravity="center"
                android:textSize="25dp"
                />

        </LinearLayout>

        <LinearLayout
            android:weightSum="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_margin="5dp"
                android:layout_gravity="center_horizontal"
                android:textSize="25dp"
                android:text="@string/datum_reg"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:text="@string/empty"
                android:id="@+id/txtDatumReg"
                android:layout_margin="5dp"
                android:gravity="center"
                android:textSize="25dp"
                />

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bttnMojiOglasi"
            android:id="@+id/bttnMojiOglasi"
            android:layout_gravity="center_horizontal"
            android:padding="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bttnPostavke"
            android:id="@+id/bttnPostavke"
            android:layout_gravity="center_horizontal"
            android:padding="20dp"
            />

    </LinearLayout>
</ScrollView>