<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context="com.example.computer.petme.activity.AccountActivity"
        >


        <ImageView
            android:layout_width="190dp"
            android:layout_height="167dp"
            android:id="@+id/imgKorisnickaSlikaPromijeni"
            android:layout_margin="5dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/majmun"/>

        <LinearLayout
            android:weightSum="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_margin="5dp"
                android:layout_gravity="center_horizontal"
                android:textSize="25dp"
                android:text="@string/username_text"/>

            <EditText
                android:id="@+id/edtUsername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:editable="false"
                />

        </LinearLayout>


        <LinearLayout
            android:weightSum="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_margin="5dp"
                android:layout_gravity="center_horizontal"
                android:textSize="25dp"
                android:text="@string/email_txt"/>

            <EditText
                android:editable="false"
                android:id="@+id/edtEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"/>

        </LinearLayout>

        <LinearLayout
            android:weightSum="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_margin="5dp"
                android:layout_gravity="center_horizontal"
                android:textSize="25dp"
                android:text="@string/fullname"/>

            <EditText
                android:id="@+id/edtFullname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"/>

        </LinearLayout>

        <LinearLayout
            android:weightSum="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_margin="5dp"
                android:layout_gravity="center_horizontal"
                android:textSize="25dp"
                android:text="@string/phone_txt"/>

            <EditText
                android:id="@+id/edtPhone"
                android:inputType="phone"
                android:ems="10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"/>

        </LinearLayout>

        <LinearLayout
            android:weightSum="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_weight="0.5"
                android:layout_margin="5dp"
                android:layout_gravity="center_horizontal"
                android:textSize="25dp"
                android:text="@string/lokacija"/>

            <EditText
                android:id="@+id/edtLokacija"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"/>

        </LinearLayout>




        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bttn_pohrani"
            android:id="@+id/bttnPohraniPromjene"
            android:layout_gravity="center_horizontal"
            android:padding="20dp"
            />

    </LinearLayout>
</ScrollView>